<resources>
    <string name="weekday_day">%1$s %2$s</string>
    <string name="month_year" formatted="false">%B %Y</string>
    <string name="preferences_start_weekday_default">1</string>
    <string name="ap_version_id">2.01.0018</string>
    <string name="htc_private_app">Calendar</string>
    <string name="no_upcoming_event">No upcoming appointments.</string>
    <string name="all_day_event">All-day events:</string>
    <string name="importance_label">Importance</string>
    <string name="show_add_importance">Add Importance</string>
    <string name="hide_add_importance">Hide Importance</string>
    <string name="htc_monthly_on_day">Monthly (on day %s)</string>
    <string name="htc_custom">Custom (No customize)</string>
    <string name="new_meeting">Meeting Invitation</string>
    <string name="meeting_reply">Reply</string>
    <string name="meeting_reply_all">Reply all</string>
    <string name="meeting_forward">Forward</string>
    <string name="bodyText_title_subject">Subject:</string>
    <string name="bodyText_title_from">From:</string>
    <string name="bodyText_title_to">To:</string>
    <string name="bodyText_reply_message">----- Reply message -----</string>
    <string name="event_item_organizer">Organizer</string>
    <string name="event_item_sender">Sender</string>
    <string name="event_item_description">Description</string>
    <string name="event_item_attendees">Attendees</string>
    <string name="event_item_note">Note:</string>
    <string name="event_item_repeats">Repeat</string>
    <string name="event_item_response">Response</string>
    <string name="event_item_reminder">Reminder</string>
    <string name="event_delete_reminder">Are you sure you want to delete this reminder?</string>
    <string name="event_item_create_note">Create note</string>
    <string name="event_item_open_note">Open note</string>
    <string name="menu_manage_calendars">Calendars</string>
    <string name="search_hint">Search calendar</string>
    <string name="search_title">Search</string>
    <string name="search_result_matched">result(s) matched</string>
    <string name="search_result_not_found">Not found</string>
    <string name="weather_city">City</string>
    <string name="preferences_main_title">Calendar settings</string>
    <string name="preferences_start_in_dialog">Start in</string>
    <string name="preferences_start_dayview_dialog">Day views</string>
    <string name="preferences_start_in_default">0</string>
    <string name="preferences_start_dayview_default">1</string>
    <string name="preferences_lunar_enable_title">Chinese Lunar</string>
    <string name="preferences_lunar_enable_summary">Display Chinese lunar calendar in Month</string>
    <string name="preferences_weather_enable_title">Include weather</string>
    <string name="preferences_apply_settings_to_title">Apply settings to</string>
    <string name="preferences_apply_settings_to_dialog">Calendars</string>
    <string name="cant_save_event_title">This event setting cannot be saved.</string>
    <string name="cant_save_event_content">For a repeating event, you can not set the alert for an event before an earlier event in the series.</string>
    <string name="add_new_event">Add event</string>
    <string name="htc_add_label">Add</string>
    <string name="htc_save_label">Save</string>
    <string name="htc_discard_label">Cancel</string>
    <string name="label_current_location">Current location</string>
    <string name="label_temp_h">H:</string>
    <string name="label_temp_l">L:</string>
    <string name="label_current">(Current)</string>
    <string name="preferences_start_weekday_dialog">First day of week</string>
    <string name="all_calendars">All calendars</string>
    <string name="htc_search_setting_description">Title, description, location</string>
    <string name="htc_update_now">Update now...</string>
    <string name="htc_share_vCalendar">Share vCalendar</string>
    <string name="htc_forward_vCalendar">Forward</string>
    <string name="htc_share_vCalendar_title">Share via</string>
    <string name="htc_go_to">Go to</string>
    <string name="import_title_label">Choose a Calendar to import</string>
    <string name="import_event">You have one event has been imported</string>
    <string name="import_multi_events">You have %d events has been imported</string>
    <string name="import_event_fail">Unable to import event</string>
    <string name="meeting_conflict">Meeting conflict</string>
    <string name="meeting_conflicts">Meeting conflicts</string>
    <string name="have_event">event</string>
    <string name="have_events">events</string>
    <string name="menu_associate_notes">Associate note</string>
    <string name="menu_unassociate_notes">Remove note link</string>
    <string name="menu_wifi_print">Print</string>
    <string name="search_editor_hint">Search</string>
    <string name="hyperlink_item_call">Call</string>
    <string name="hyperlink_item_send_message">Send message</string>
    <string name="hyperlink_item_open_contact">Open contact</string>
    <string name="hyperlink_item_add_contact">Add contact</string>
    <string name="hyperlink_item_save_contact">Save to an existing contact</string>
    <string name="verify_phone_num">Check the phone number</string>
    <string name="hyperlink_option">Option</string>
    <string name="contact_no_name">No name</string>
    <string name="email">Email</string>
    <string name="hint_to">To</string>
    <string name="hint_cc">Cc</string>
    <string name="hint_bcc">Bcc</string>
    <string name="compose_view_recipient">View contact</string>
    <string name="compose_remove_recipient">Remove recipient</string>
    <string name="compose_add_to_contact">Add contact</string>
    <string name="compose_add_to_existed_contact">Save to existing contact</string>
    <string name="compose_remove_recipient_msg">Would you like to remove the recipient?</string>
    <string name="compose_mail_address_invalid_msg">Please enter a valid email address.</string>
    <string name="warning">Warning</string>
    <string name="htc_hint_subject">Subject</string>
    <string name="htc_check_calendar_label">Check calendar</string>
    <string name="htc_check_conflicts_label">Check for conflicts</string>
    <string name="htc_select_photo">Select photo</string>
    <string name="pcsync">PC Sync</string>
    <string name="exchange">Exchange</string>
    <string name="gmail">Google</string>
    <string name="facebook">Facebook</string>
    <string name="edit_event_input_warning">Maximum text length:</string>
    <string name="sub_title_multi_calendar">Multi-calendar</string>
    <string name="no_meeting">No meeting invitations found</string>
    <string name="invitation">Invites</string>
    <string name="meeting_no_subject">(No subject)</string>
    <string name="noon">Noon</string>
    <string name="help">Help</string>
    <string name="out_of_date_boundary">Out of date boundary</string>
    <string name="edit_tab">Edit tabs</string>
    <string name="app_label">Calendar</string>
    <string name="what_label">What</string>
    <string name="when_label">When</string>
    <string name="where_label">Where</string>
    <string name="attendees_label">Guests</string>
    <string name="response_label" formatted="false">%s (%d)</string>
    <string name="repeats_label">Repetition</string>
    <string name="no_title_label">(No title)</string>
    <string name="show_agenda_view">Show agenda</string>
    <string name="show_day_view">Show day</string>
    <string name="agenda_view">Agenda</string>
    <string name="day_view">Day</string>
    <string name="week_view">Week</string>
    <string name="month_view">Month</string>
    <string name="event_view">View event</string>
    <string name="event_create">New event</string>
    <string name="event_edit">Edit</string>
    <string name="goto_today">Today</string>
    <string name="plus_N_more">(plus %d more …)</string>
    <string name="calendars_title">Calendars</string>
    <string name="synced_visible">synced, visible</string>
    <string name="synced_not_visible">synced, not visible</string>
    <string name="not_synced_not_visible">not synced, not visible</string>
    <string name="add_calendars">Add calendars</string>
    <string name="remove_calendars">Remove calendars</string>
    <string name="event_edit_title">Event details</string>
    <string name="hint_what">Event name</string>
    <string name="hint_where">Event location</string>
    <string name="hint_description">Event description</string>
    <string name="hint_attendees">Email addresses</string>
    <string name="creating_event">Event created</string>
    <string name="saving_event">Event saved</string>
    <string name="loading_calendars_title">Loading calendars</string>
    <string name="loading_calendars_message">Loading calendars…</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="alert_missed_events_single">(%s more reminder)</string>
    <string name="alert_missed_events_multiple">(%s more reminders)</string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="add_new_reminder">Add reminder</string>
    <string name="edit_event_to_label">To</string>
    <string name="edit_event_from_label">From</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_show_extra_options">Show extra options</string>
    <string name="edit_event_hide_extra_options">Hide extra options</string>
    <string name="description_label">Description</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="reminders_label">Reminders</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_calendars_found">You have no calendars.</string>
    <string name="view_event_calendar_label">Calendar:</string>
    <string name="view_event_organizer_label">Organizer:</string>
    <string name="view_event_timezone_label">Local time zone:</string>
    <string name="view_event_response_label">Attending?</string>
    <string name="agenda_today">Today, %1$s</string>
    <string name="agenda_yesterday">YESTERDAY, %1$s</string>
    <string name="agenda_tomorrow">TOMORROW, %1$s</string>
    <string name="loading">Loading…</string>
    <string name="show_older_events">Showing events since %1$s. Tap to look for more.</string>
    <string name="show_newer_events">Showing events until %1$s. Tap to look for more.</string>
    <string name="edit_event_label">Edit event</string>
    <string name="delete_label">Delete</string>
    <string name="delete_event_label">Delete event</string>
    <string name="save_label">Done</string>
    <string name="discard_label">Revert</string>
    <string name="import_label">Import</string>
    <string name="snooze_all_label">Snooze all</string>
    <string name="dismiss_all_label">Dismiss all</string>
    <string name="does_not_repeat">One-time event</string>
    <string name="daily">Daily</string>
    <string name="every_weekday">Every weekday (Mon–Fri)</string>
    <string name="weekly">Weekly (every %s)</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_alerts_title">Reminder settings</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_alerts_type_title">Set alerts &amp; notifications</string>
    <string name="preferences_alerts_type_dialog">Alerts &amp; notifications</string>
    <string name="preferences_alerts_type_default">1</string>
    <string name="preferences_alerts_vibrate_title">Vibrate</string>
    <string name="preferences_alerts_ringtone_title">Select ringtone</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_default">10</string>
</resources>