<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/event" android:background="#fffafafa" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
            <TextView android:id="@id/what_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/what_label" style="@style/TextAppearance.EditEvent_Label" />
            <EditText android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_what" android:capitalize="words" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/when_container" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
            <TextView android:id="@id/from_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_event_from_label" style="@style/TextAppearance.EditEvent_Label" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:gravity="left|center" android:id="@id/start_date" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="7.0" style="?android:attr/textAppearanceMediumInverse" />
                <Button android:gravity="left|center" android:id="@id/start_time" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="4.0" style="?android:attr/textAppearanceMediumInverse" />
            </LinearLayout>
            <TextView android:id="@id/to_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_event_to_label" style="@style/TextAppearance.EditEvent_Label" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:gravity="left|center" android:id="@id/end_date" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="7.0" style="?android:attr/textAppearanceMediumInverse" />
                <Button android:gravity="left|center" android:id="@id/end_time" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="4.0" style="?android:attr/textAppearanceMediumInverse" />
            </LinearLayout>
            <LinearLayout android:gravity="right|center" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:paddingTop="1.0dip" android:paddingRight="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_event_all_day_label" style="?android:attr/textAppearanceMediumInverse" />
                <CheckBox android:id="@id/is_all_day" android:paddingTop="15.0dip" android:paddingRight="1.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <View android:background="@*android:drawable/divider_horizontal_bright" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/where_container" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/where_label" style="@style/TextAppearance.EditEvent_Label" />
            <EditText android:id="@id/location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_where" android:capitalize="sentences" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
            <TextView android:id="@id/description_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description_label" style="@style/TextAppearance.EditEvent_Label" />
            <EditText android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_description" android:capitalize="sentences" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/calendar_group" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
            <View android:background="@*android:drawable/divider_horizontal_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_label" style="@style/TextAppearance.EditEvent_Label" />
            <com.htc.widget.HtcSpinner android:id="@id/calendars" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/app_label" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/attendees_group" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/attendees_label" style="@style/TextAppearance.EditEvent_Label" />
            <MultiAutoCompleteTextView android:id="@id/attendees" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" android:hint="@string/hint_attendees" android:inputType="textMultiLine|textEmailAddress" android:imeOptions="actionNext" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
            <TextView android:id="@id/repeats_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/repeats_label" style="@style/TextAppearance.EditEvent_Label" />
            <com.htc.widget.HtcSpinner android:id="@id/repeats" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/repeats_label" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/extra_options_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
                <TextView android:id="@id/presence_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/presence_label" style="@style/TextAppearance.EditEvent_Label" />
                <com.htc.widget.HtcSpinner android:entries="@array/availability" android:id="@id/availability" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/presence_label" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
                <TextView android:id="@id/privacy_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_label" style="@style/TextAppearance.EditEvent_Label" />
                <com.htc.widget.HtcSpinner android:entries="@array/visibility" android:id="@id/visibility" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/privacy_label" />
            </LinearLayout>
        </LinearLayout>
        <View android:id="@id/reminders_separator" android:background="@*android:drawable/divider_horizontal_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/reminders_container" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EditEvent_Layout">
            <TextView android:id="@id/reminders_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reminders_label" style="@style/TextAppearance.EditEvent_Label" />
            <LinearLayout android:orientation="vertical" android:id="@id/reminder_items_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:gravity="right|center" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="2.0dip" android:text="@string/add_new_reminder" style="?android:attr/textAppearanceSmallInverse" />
            <ImageButton android:gravity="right|center" android:id="@id/reminder_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" style="@style/PlusButton" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@*android:drawable/bottom_bar" android:paddingLeft="4.0dip" android:paddingTop="5.0dip" android:paddingRight="4.0dip" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/save" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/save_label" android:layout_weight="1.0" />
            <Button android:id="@id/discard" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/discard_label" android:layout_weight="1.0" />
            <Button android:id="@id/delete" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/delete_label" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>